--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3380,7 +3380,6 @@ paths:
   /projects/{projectIdOrName}/topics:
     post:
       summary: Create a topic
-      description: Create a new topic for the project. Topics are used to categorize and organize notifications.
       operationId: createTopic
       tags: ["Destination"]
       parameters:
@@ -3569,8 +3568,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/notification-event-topic-routes:
     post:
-      summary: Create an event-topic route
-      description: Create a new event-topic route that maps specific event types to topics.
+      summary: Create a notification event-topic route
       operationId: createEventTopicRoute
       tags: ["Notification"]
       parameters:
@@ -3717,7 +3715,6 @@ paths:
   /projects/{projectIdOrName}/topic-destination-routes:
     post:
       summary: Create a topic destination route
-      description: Create a new route that connects a topic to a destination.
       operationId: createTopicDestinationRoute
       tags: ["Destination"]
       parameters:
@@ -3784,7 +3781,6 @@ paths:
       x-codegen-request-body-name: topicDestinationRoute
     get:
       summary: List topic destination routes
-      description: Retrieve all topic-to-destination routes for a project with optional filtering.
       operationId: listTopicDestinationRoutes
       tags: ["Destination"]
       parameters:
@@ -3824,7 +3820,6 @@ paths:
   /projects/{projectIdOrName}/topic-destination-routes/{routeId}:
     delete:
       summary: Delete a topic destination route
-      description: Remove the link between a topic and a destination.
       operationId: deleteTopicDestinationRoute
       tags: ["Destination"]
       parameters:
