--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -208,6 +208,14 @@ components:
           example: ["https://api.mparticle.com"]
           description: A list of URLs that represent the audience for the token, which is needed for some client credential grant flows.
           x-go-type-skip-optional-pointer: true
+        scopeMappings:
+          type: object
+          description: Maps input scopes to their full OAuth scope values with template variable support. Scopes not in this map are passed through unchanged. Needed for some providers.
+          additionalProperties:
+            type: string
+          x-go-type-skip-optional-pointer: true
+          example:
+            default: https://{{.workspace}}.api.com/default
         tokenMetadataFields:
           $ref: '#/components/schemas/TokenMetadataFields'
         docsURL:
