feat: Add isCustom and isRequired to FieldMetadata and modify readOnly to pointer

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -457,7 +457,14 @@ components:
           type: boolean
           description: Whether the field is read-only.
           example: false
-          x-go-type-skip-optional-pointer: true
+        isCustom:
+          type: boolean
+          description: Whether the field is custom field.
+          example: false
+        isRequired:
+          type: boolean
+          description: Whether the field is required when creating a new record.
+          example: false
         values:
           type: array
           description: If the valueType is singleSelect or multiSelect, this is a list of possible values
