--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3497,11 +3497,11 @@ paths:
             schema:
               type: object
               required:
-                - label
+                - name
               properties:
-                label:
+                name:
                   type: string
-                  description: A human-readable label for the topic.
+                  description: A human-readable name for the topic.
                   example: "Updated System Alerts"
       responses:
         200:
