--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -579,7 +579,7 @@ components:
           x-go-type-skip-optional-pointer: true
         schedule:
           type: string
-          description: Cron schedule for checking schema changes. Minimum frequency is once per hour.
+          description: Cron schedule for checking schema changes. Minimum frequency is once per hour. Defaults to once a day.
           default: "0 */24 * * *"
           example: "0 */6 * * *"
           x-go-type-skip-optional-pointer: true
