--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -53,6 +53,8 @@ components:
           $ref: '#/components/schemas/IntegrationProxy'
         subscribe:
           $ref: '#/components/schemas/IntegrationSubscribe'
+        watchSchema:
+          $ref: '#/components/schemas/WatchSchema'
 
     IntegrationProxy:
       title: Proxy Integration
@@ -136,7 +138,7 @@ components:
           $ref: '#/components/schemas/Delivery'
         enabled:
           type: string
-          description: If set to `always`, the integration will automatically install upon user connection and skip the user field selection step. 
+          description: If set to `always`, the integration will automatically install upon user connection and skip the user field selection step.
           enum: [always]
           x-go-type-skip-optional-pointer: true
 
@@ -561,3 +563,73 @@ components:
           type: boolean
           description: If true, users can set default values for any field.
           example: true
+
+    WatchSchema:
+      title: Provider schema watch
+      type: object
+      description: Configuration for monitoring provider schema changes.
+      required:
+        - destination
+        - allObjects
+      properties:
+        destination:
+          type: string
+          description: The destination to send schema change notifications to.
+          example: fieldWatchStream
+          x-go-type-skip-optional-pointer: true
+        schedule:
+          type: string
+          description: Cron schedule for checking schema changes. Minimum frequency is once per hour. Defaults to once a day.
+          default: "0 */24 * * *"
+          example: "0 */6 * * *"
+          x-go-type-skip-optional-pointer: true
+        allObjects:
+          $ref: '#/components/schemas/WatchSchemaAllObjects'
+
+    WatchSchemaAllObjects:
+      title: Watch Schema All Objects
+      type: object
+      description: Schema change event configuration for all objects in the integration.
+      properties:
+        fieldsCreated:
+          $ref: '#/components/schemas/FieldsCreatedEvent'
+        fieldDeleted:
+          $ref: '#/components/schemas/FieldDeletedEvent'
+        fieldTypeChanged:
+          $ref: '#/components/schemas/FieldTypeChangedEvent'
+
+    FieldsCreatedEvent:
+      title: Fields Created Event
+      type: object
+      description: Configuration for detecting when new fields are created.
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: If always, the integration will monitor for new fields by default.
+          enum: [always]
+
+    FieldDeletedEvent:
+      title: Field Deleted Event
+      type: object
+      description: Configuration for detecting when fields are deleted.
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: If always, the integration will monitor for deleted fields by default.
+          enum: [always]
+
+    FieldTypeChangedEvent:
+      title: Field Type Changed Event
+      type: object
+      description: Configuration for detecting when field types change.
+      required:
+        - enabled
+      properties:
+        enabled:
+          type: string
+          description: If always, the integration will monitor for field type changes by default.
+          enum: [always]
