change key from name to key

--- a/api/write.yaml
+++ b/api/write.yaml
@@ -158,13 +158,13 @@ components:
           items:
             type: object
             properties:
-              name:
+              key:
                 type: string
-                description: The name of the header
+                description: The key of the header
               value:
                 type: string
                 description: The value of the header
-          description: "To write headers to the record. Note: currently only HubSpot headers are supported"
+          description: "To write headers to the record. Note: currently only SalesForce headers are supported"
           example:
             [
               { "key": "custom-header-key1", "value": "custom-header-value1" },
