--- a/api/write.yaml
+++ b/api/write.yaml
@@ -164,7 +164,7 @@ components:
               value:
                 type: string
                 description: The value of the header
-          description: "To write headers to the record. Note: currently only SalesForce headers are supported"
+          description: "To write headers to the record. Note: currently only Salesforce headers are supported"
           example:
             [
               { "key": "custom-header-key1", "value": "custom-header-value1" },
