support object provider config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -99,6 +99,13 @@ components:
           $ref: '#/components/schemas/SelectedFieldsAutoConfig'
         backfill:
           $ref: '#/components/schemas/BackfillConfig'
+        providerConfig:
+          $ref: '#/components/schemas/ReadConfigObjectProviderConfig'
+
+    ReadConfigObjectProviderConfig:
+      title: Read Config Object Provider Config
+      description: Stores provider specific configuration for a read object.
+      type: object
 
     SelectedValueMappings:
       title: Selected Value Mappings
