--- a/config/config.yaml
+++ b/config/config.yaml
@@ -99,12 +99,18 @@ components:
           $ref: '#/components/schemas/SelectedFieldsAutoConfig'
         backfill:
           $ref: '#/components/schemas/BackfillConfig'
+        # This is a map of source specific configuration for a read object. It is an experimental field and is subject to change.
+        # It stores provider specific configuration for a read object. For example, it can store the query used to define the object
+        # in snowflake. Think of it as all configuration that is required to define the object on the provider.
         source:
           $ref: '#/components/schemas/Source'
 
+    # This is a map of source specific configuration for a read object. It is an experimental field and is subject to change.
+    # It stores provider specific configuration for a read object. For example, it can store the query used to define the object
+    # in snowflake. Think of it as all configuration that is required to define the object on the provider.
     Source:
       title: Read Config Object Source
-      description: Stores source specific configuration for a read object.
+      description: Stores source specific configuration for a read object. It is an experimental field and is subject to change. It stores provider specific configuration for a read object. For example, it can store the query used to define the object in snowflake. Think of it as all configuration that is required to define the object on the provider.
       type: object
 
     SelectedValueMappings:
